tests/negative/iter-redeclare.damn
[ For-Loop iterator 'i' is already declared ]
BEGIN
    FOR i FROM 0 TO 10 DO
        FOR i FROM 5 TO 8 DO
            WRITE i;
        ENDFOR
    ENDFOR
END

